提取项目公用配置，支持通过编辑.projectrc.js文件完成统一配置

--- a/templates/_assets.html
+++ b/templates/_assets.html
@@ -1,6 +1,6 @@
-<!--[if lt IE 10]><script src="/assets/vendor/babel-polyfill/polyfill.min.js"></script><![endif]-->
-  <script src="/assets/vendor/jQuery/1.12.4/jquery.min.js"></script>
-  <script src="/assets/vendor/react/16.4.1/react.min.js"></script>
-  <script src="/assets/vendor/react/16.4.1/react-dom.min.js"></script>
-  <script src="/assets/vendor/vue/2.5.17/vue.min.js"></script>
-  <link href="/assets/css/global.css" rel="stylesheet" />
+<!--[if lt IE 10]><script src="${publicPath}/assets/vendor/babel-polyfill/polyfill.min.js"></script><![endif]-->
+  <script src="${publicPath}/assets/vendor/jQuery/1.12.4/jquery.min.js"></script>
+  <script src="${publicPath}/assets/vendor/react/16.4.1/react.min.js"></script>
+  <script src="${publicPath}/assets/vendor/react/16.4.1/react-dom.min.js"></script>
+  <script src="${publicPath}/assets/vendor/vue/2.5.17/vue.min.js"></script>
+  <link href="${publicPath}/assets/css/global.css" rel="stylesheet" />
