--- a/templates/_assets.html
+++ b/templates/_assets.html
@@ -3,4 +3,4 @@
   <script src="${publicPath}/assets/vendor/react/16.4.1/react.min.js"></script>
   <script src="${publicPath}/assets/vendor/react/16.4.1/react-dom.min.js"></script>
   <script src="${publicPath}/assets/vendor/vue/2.5.17/vue.min.js"></script>
-  <link href="${publicPath}/assets/css/global.css" rel="stylesheet" />
+  <link href="${publicPath}/assets/css/bootstrap/bootstrap.min.css" rel="stylesheet" />
