--- a/templates/guide.ejs
+++ b/templates/guide.ejs
@@ -248,7 +248,7 @@ new Vue({
         <h3>添加一个已存在的项目：<code>add</code></h3>
         <pre class="pre-show prettyprint lang-bash">jms add D:\my-project</pre>
         <code>add</code> 别名 <code>a</code>：
-        <pre class="pre-show prettyprint lang-bash">jms d D:\my-project</pre>
+        <pre class="pre-show prettyprint lang-bash">jms a D:\my-project</pre>
         <h3>项目管理控制面板：<code>console</code></h3>
         <p>控制面板将以占用方式运行。并自动访问浏览器地址：<b><i>http://localhost:3008/console_board</i></b>。</p>
         <pre class="pre-show prettyprint lang-bash">jms console</pre>
@@ -279,6 +279,7 @@ new Vue({
   <div class="container">
     <div class="row">
       <div class="span12">
+        <h5><a href="https://github.com/alex86gbk" target="_blank">AlexBian</a></h5>
       </div>
     </div>
   </div>
