添加自定义主题示例

--- a/src/components/ReactApp.less
+++ b/src/components/ReactApp.less
@@ -4,3 +4,11 @@ ul {
 .list {
   color: red;
 }
+.customStyle {
+  :global {
+    .ant-btn {
+      margin-right: 8px;
+      margin-bottom: 12px;
+    }
+  }
+}
