--- a/src/pages/guide.css
+++ b/src/pages/guide.css
@@ -147,7 +147,7 @@ pre.pre-show {
 }
 
 #demo-example .item {
-  padding: 30px 0;
+  padding: 30px 0 0;
   margin: 10px;
   color: #fff;
   -webkit-border-radius: 3px;
