恢复对 public 目录的版本控制（用于存放静态资源，打包过程 public 内的文件不受影响）;添加 optimization.runtimeChunk 配置，避免输出 js 文件 hash 受影响；添加 extract-text-webpack-plugin 插件 allChunks 配置，避免输出 css 文件 hash 受影响

--- a/templates/_assets.html
+++ b/templates/_assets.html
@@ -1,4 +1,4 @@
-<!--[if lt IE 10]><script src="${publicPath}/assets/vendor/babel-polyfill/polyfill.min.js"></script><![endif]-->
+  <!--[if IE]><script src="${publicPath}/assets/vendor/babel-polyfill/polyfill.min.js"></script><![endif]-->
   <script src="${publicPath}/assets/vendor/jQuery/1.12.4/jquery.min.js"></script>
   <script src="${publicPath}/assets/vendor/react/16.4.1/react.min.js"></script>
   <script src="${publicPath}/assets/vendor/react/16.4.1/react-dom.min.js"></script>
