--- a/templates/_assets.html
+++ b/templates/_assets.html
@@ -3,7 +3,12 @@
   <meta content="yes" name="apple-mobile-web-app-capable">
   <meta content="yes" name="apple-touch-fullscreen">
   <meta content="telephone=no,email=no" name="format-detection">
-  <!--[if IE]><script src="${publicPath}/assets/vendor/babel-polyfill/polyfill.min.js"></script><![endif]-->
+  <script>
+    var JMSPublicPath = "${publicPath}";
+    if (!!window.ActiveXObject || "ActiveXObject" in window) {
+      document.writeln('<script src="${publicPath}/assets/vendor/babel-polyfill/polyfill.min.js"' + '>' + '<' + '/' + 'script>');
+    }
+  </script>
   <script src="${publicPath}/assets/vendor/jQuery/1.12.4/jquery.min.js"></script>
   <script src="${publicPath}/assets/vendor/react/16.4.1/react.min.js"></script>
   <script src="${publicPath}/assets/vendor/react/16.4.1/react-dom.min.js"></script>
