--- a/templates/_assets.html
+++ b/templates/_assets.html
@@ -1,14 +1,15 @@
 <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=EmulateIE9">
-  <meta content="yes" name="apple-mobile-web-app-capable">
-  <meta content="yes" name="apple-touch-fullscreen">
-  <meta content="telephone=no,email=no" name="format-detection">
-  <script>
-    var JMSPublicPath = "${publicPath}";
-    if (!!window.ActiveXObject || "ActiveXObject" in window) {
-      document.writeln('<script src="${publicPath}/assets/vendor/babel-polyfill/polyfill.min.js"' + '>' + '<' + '/' + 'script>');
-    }
-  </script>
-  <script src="${publicPath}/assets/vendor/jQuery/1.12.4/jquery.min.js"></script>
-  <script src="${publicPath}/assets/vendor/react/16.4.1/react.min.js"></script>
-  <script src="${publicPath}/assets/vendor/react/16.4.1/react-dom.min.js"></script>
+<meta http-equiv="X-UA-Compatible" content="IE=EmulateIE9">
+<meta content="yes" name="apple-mobile-web-app-capable">
+<meta content="yes" name="apple-touch-fullscreen">
+<meta content="telephone=no,email=no" name="format-detection">
+<link rel="icon" href="${publicPath}/favicon.ico" type="image/x-icon">
+<script>
+  var JMSPublicPath = "${publicPath}";
+  if (!!window.ActiveXObject || "ActiveXObject" in window) {
+    document.writeln('<script src="${publicPath}/assets/vendor/babel-polyfill/polyfill.min.js"' + '>' + '<' + '/' + 'script>');
+  }
+</script>
+<script src="${publicPath}/assets/vendor/jQuery/1.12.4/jquery.min.js"></script>
+<script src="${publicPath}/assets/vendor/react/16.4.1/react.min.js"></script>
+<script src="${publicPath}/assets/vendor/react/16.4.1/react-dom.min.js"></script>
