回归使用html-webpack-plugin，新版本编译性能更好，支持多页只重新编译修改的文件

--- a/templates/index.ejs
+++ b/templates/index.ejs
@@ -2,11 +2,12 @@
 <html>
 
 <head>
-  ${require("html-loader?interpolate!./_assets.html")}
+  <%= require("html-loader?interpolate!./_assets.html") %>
   <title>Hello! Js-Multi-Seed</title>
 </head>
 
 <body>
-<div id="react_app"></div>
+  <div id="react_app"></div>
 </body>
+
 </html>
